--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
+    "prepare": "husky install",
     "lint": "eslint '*/**/*.{js,jsx,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
+    "@arco-design/web-react": "^2.24.1",
+    "immer": "^9.0.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.0.2"
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
+    "use-immer": "^0.6.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
@@ -22,19 +27,20 @@
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
+    "less": "^4.1.2",
     "lint-staged": "^12.0.2",
     "prettier": "^2.4.1",
     "stylelint": "^14.1.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": "npm run lint"
+    "**/*.{js,jsx,ts,tsx}": [
+      "npm run lint",
+      "git add"
+    ]
   }
 }
