--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "prepare": "husky install",
-    "lint": "eslint '*/**/*.{js,jsx,ts,tsx}' --quiet --fix"
+    "lint": "eslint '*/**/*.{js,jsx,ts,tsx}' --quiet --fix",
+    "stylelint": "stylelint 'src/**/*.less' --fix --cache"
   },
   "dependencies": {
     "@arco-design/web-react": "^2.24.1",
     "immer": "^9.0.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-query": "^3.33.4",
+    "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
+    "redux": "^4.1.2",
     "use-immer": "^0.6.0"
   },
   "devDependencies": {
@@ -34,12 +38,18 @@
     "lint-staged": "^12.0.2",
     "prettier": "^2.4.1",
     "stylelint": "^14.1.0",
+    "stylelint-config-css-modules": "^2.3.0",
+    "stylelint-config-standard": "^24.0.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "npm run lint",
+      "git add"
+    ],
+    "*.{css, less}": [
+      "npm run stylelint",
       "git add"
     ]
   }
