--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "stylelint": "^14.1.0",
     "stylelint-config-css-modules": "^2.3.0",
     "stylelint-config-standard": "^24.0.0",
+    "stylelint-order": "^5.0.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   },
