--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@arco-design/web-react": "^2.24.1",
+    "@formily/core": "^2.0.8",
+    "@formily/react": "^2.0.8",
+    "ahooks": "^3.1.5",
     "axios": "^0.24.0",
+    "history": "^5.2.0",
     "immer": "^9.0.6",
+    "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1",
     "qs": "^6.10.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -21,7 +27,8 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "redux": "^4.1.2",
-    "use-immer": "^0.6.0"
+    "use-immer": "^0.6.0",
+    "windicss": "^3.4.2"
   },
   "devDependencies": {
     "@types/qs": "^6.9.7",
@@ -39,13 +46,17 @@
     "husky": "^7.0.4",
     "less": "^4.1.2",
     "lint-staged": "^12.0.2",
+    "postcss-less": "^6.0.0",
     "prettier": "^2.4.1",
     "stylelint": "^14.1.0",
     "stylelint-config-css-modules": "^2.3.0",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
     "typescript": "^4.3.2",
-    "vite": "^2.6.4"
+    "vite": "^2.6.4",
+    "vite-plugin-imp": "^2.1.3",
+    "vite-plugin-react-svg": "^0.2.0",
+    "vite-plugin-windicss": "^1.6.2"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
